# Kidroo

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  SKILLS.sh  biome.json  files.txt  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  turbo.json
.agents/: README.md
.agents/skills/agents-runtime/: SKILL.md
.agents/skills/composio/: SKILL.md
.agents/skills/frontend/: SKILL.md
.agents/skills/gsap/: SKILL.md
.agents/skills/hatchet/: SKILL.md
.agents/skills/security/: SKILL.md
.agents/skills/setup/: SKILL.md
.agents/skills/supabase/: SKILL.md
.agents/skills/testing/: SKILL.md
.github/workflows/: ci.yml
.skills/: README.md  manifest.json
agents/: __init__.py
agents/download/: __init__.py  agent.py
agents/download/skills/: __init__.py  ytdlp.py
agents/lib/: __init__.py  base.py  config.py  llm.py  logging.py  search.py  supabase.py
agents/metadata/: __init__.py  agent.py  prompts.py
agents/orchestrator/: __init__.py  agent.py  prompts.py
agents/orchestrator/skills/: __init__.py
agents/research/: __init__.py  agent.py  prompts.py
agents/research/skills/: __init__.py  exa_search.py  firecrawl_scrape.py  tavily_search.py
agents/upload/: __init__.py  agent.py
agents/upload/skills/: __init__.py  composio_youtube.py
apps/api/: README.md  main.py
apps/web/: README.md  middleware.ts  package.json  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/app/: page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/app/channels/connect/: ConnectChannelForm.tsx  page.tsx
apps/web/app/jobs/[id]/: JobActions.tsx  JobChatView.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: AgentLogRail.tsx  AgentLogTimeline.tsx  ChannelHealthDot.tsx  CommandMenu.tsx  Header.tsx  JobComposer.tsx  ScheduleConfirmCard.tsx  Sidebar.tsx  SignOutButton.tsx  StatusBadge.tsx  VideoSelectionCard.tsx
apps/web/components/chat/: AgentMessage.tsx  ChatComposer.tsx  UserMessage.tsx
apps/web/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Dialog.tsx  Input.tsx  ScrollArea.tsx  Select.tsx  Separator.tsx  Skeleton.tsx  Textarea.tsx  Tooltip.tsx
apps/web/hooks/: useAgentLogs.ts  useChannels.ts  useCommandMenu.ts  useVideos.ts
apps/web/lib/: gsap.ts
apps/web/lib/agents/: constants.ts
apps/web/lib/auth/: sanitize-next.ts
apps/web/lib/supabase/: client.ts  server.ts
apps/web/styles/: tokens.css
docs/: AGENTS.md  ARCHITECTURE.md  BRANCHING.md  DEPLOYMENT.md  INTEGRATIONS.md  LOCAL_DEV.md  PRD.md  ROADMAP.md  TECH_STACK.md  UI_SPEC.md
scripts/: dev.sh
supabase/migrations/: 001_initial_schema.sql  002_auth_allowlist.sql  003_jobs_user_default_and_quota_rpc.sql  003_quota_rpc.sql
tests/: README.md  conftest.py  test_config.py  test_llm.py  test_logging.py  test_search.py  test_video_pipeline.py
tests/unit/lib/: test_base.py  test_logging.py
workflows/: README.md  __init__.py  hatchet.py  pipeline_models.py  video_pipeline.py  worker.py
