[project]
name = "kidroo"
version = "0.1.0"
description = "Agentic YouTube content pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "hatchet-sdk>=0.54.0",
    "crewai>=0.63.0",
    "groq>=0.11.0",
    "cerebras-cloud-sdk>=1.0.0",
    "firecrawl-py>=1.0.0",
    "exa-py>=1.0.0",
    "supabase>=2.7.0",
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
