[project]
name = "kidroo"
version = "0.1.0"
description = "Agentic YouTube content pipeline — agents runtime, FastAPI server, Hatchet workflows"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "UNLICENSED" }
authors = [{ name = "Kidroo" }]

dependencies = [
    # LLM SDKs (both OpenAI-compatible streaming)
    "groq>=0.11.0",
    "cerebras-cloud-sdk>=1.20.0",

    # Agent framework
    "crewai>=0.80.0",

    # Research tools
    "tavily-python>=0.5.0",
    "firecrawl-py>=1.6.0",
    "exa-py>=1.3.0",

    # YouTube integration
    "composio-core>=0.6.0",
    "composio-crewai>=0.6.0",

    # Durable workflow orchestrator
    "hatchet-sdk>=1.0.0",

    # Data layer
    "supabase>=2.10.0",
    "asyncpg>=0.30.0",

    # HTTP / web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",

    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Observability
    "structlog>=24.4.0",

    # yt-dlp is installed as a system tool (see SKILLS.sh) but we also
    # pin the python module for programmatic calls.
    "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=6.0.2",
    "pre-commit>=4.0.0",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "workflows", "apps/api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "ASYNC",         # flake8-async
    "SIM",           # flake8-simplify
    "RUF",
]
ignore = [
    "E501",          # line-length handled by formatter
    "B008",          # FastAPI `Depends(...)` + `Query(...)` live in arg defaults by design
]

[tool.ruff.lint.per-file-ignores]
# yt-dlp wrapper: Path/os.path calls are cheap metadata ops inside an
# async generator that mainly awaits a subprocess — not blocking.
"agents/download/skills/ytdlp.py" = ["ASYNC240"]
# Tests intentionally use blind `pytest.raises(Exception)` for schema
# validation and bind Pydantic classes to CamelCase locals.
"tests/**" = ["B017", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["crewai.*", "composio.*", "hatchet_sdk.*", "tavily.*", "exa_py.*", "firecrawl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: unit tests (no I/O)",
    "integration: integration tests (external services, VCR-recorded)",
    "e2e: end-to-end tests (real services, skip in CI by default)",
]
